k8s-manifests/ingress/loki/ingress_loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  annotations:
    # 1. Шлях для Health Check (ви правильно додали)
    appgw.ingress.kubernetes.io/probe-path: "/metrics"
    
    # 🛑 2. КРИТИЧНО ВАЖЛИВО: Каже AAG використовувати HTTP для бэкенда Loki
    appgw.ingress.kubernetes.io/backend-protocol: "Http" 
    
    # 3. Рекомендується: Довший таймаут, щоб не отримати 502 при затримках
    appgw.ingress.kubernetes.io/request-timeout: "120"
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - loki-minemap.pp.ua
      secretName: loki-tls

  rules:
    - host: loki-minemap.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
